--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "mongoose": "^7.6.2",
+    "morgan": "^1.10.0",
     "redis": "^4.6.10",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
